WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
102055
Memory instrumentation: MemoryBlock name should not include full path to the block
https://bugs.webkit.org/show_bug.cgi?id=102055
Summary
Memory instrumentation: MemoryBlock name should not include full path to the ...
Yury Semikhatsky
Reported
2012-11-13 00:28:39 PST
It should be Image instead of Page.Image as Page.Image block is reported under Page block.
Attachments
Patch
(1.75 KB, patch)
2012-11-13 00:31 PST
,
Yury Semikhatsky
no flags
Details
Formatted Diff
Diff
Patch
(5.61 KB, patch)
2012-11-13 00:34 PST
,
Yury Semikhatsky
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Yury Semikhatsky
Comment 1
2012-11-13 00:31:40 PST
Created
attachment 173840
[details]
Patch
Yury Semikhatsky
Comment 2
2012-11-13 00:34:45 PST
Created
attachment 173842
[details]
Patch
WebKit Review Bot
Comment 3
2012-11-13 02:14:28 PST
Comment on
attachment 173842
[details]
Patch Clearing flags on attachment: 173842 Committed
r134389
: <
http://trac.webkit.org/changeset/134389
>
WebKit Review Bot
Comment 4
2012-11-13 02:14:32 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug