Memory instrumentation: MemoryBlock name should not include full path to the block https://bugs.webkit.org/show_bug.cgi?id=102055

Reviewed by Pavel Feldman.

Source/WebCore:

* inspector/InspectorMemoryAgent.cpp: pass only last path component as MemoryBlock name
intead of fully qualified name.

LayoutTests:

Use Image instead of Page.Image as block identifier.

* inspector/profiler/memory-instrumentation-cached-images-expected.txt:
* inspector/profiler/memory-instrumentation-cached-images.html:
* inspector/profiler/memory-instrumentation-canvas-expected.txt:
* inspector/profiler/memory-instrumentation-canvas.html:


Canonical link: https://commits.webkit.org/120128@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134389 268f45cc-cd09-0410-ab3c-d52691b4dbfc